@@ -77,11 +77,15 @@ sub forum_list : Regex('^forum/(\w+)$') {
                 {   order_by => 'post_on',
                     rows     => 1,
                     page     => 1,
-                    columns  => ['text'],
+                    columns  => ['text', 'formatter'],
                 }
             );
             next unless ($rs);
             $_->{text} = $rs->text;
+            # filter format by Foorum::Filter
+            $_->{text} = $c->model('FilterWord')
+                ->convert_offensive_word( $c, $_->{text} );
+            $_->{text} = filter_format($_->{text}, { format => $rs->formatter });
         }
         $c->stash->{topics} = \@topics;
         $c->stash->{template} = 'forum/forum.rss.html';
